--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -38,6 +38,7 @@
         "https://imageshack.com/i/pnXgecRzp"
       ],
       "description": "Le projet vise à transformer un site portfolio statique en une version dynamique. Les trois missions principales étaient les suivantes et ont été suivie à l’aide d’un tableau Kanban. Développer la page des présentation des travaux de la cliente en ajoutant les fonctionnalités nécessaires pour afficher de manière dynamique les différents projets (filtrage et tri). Développer la page de connexion de l’utilisateur de zéro, en gérant l’interface utilisateur et les fonctionnalités de connexion sécurisée, autorisant ensuite l’utilisateur connecté de gérer le contenu du site (ajout, modification et suppression de projets). Développer la modale d’upload de nouveaux projets de zero.",
+      "problems" : "Les difficultés rencontrées étaient liées à la gestion de l'API ainsi qu'à la compréhension de l'asynchronicité dans JavaScript. Un retour sur les concepts liés aux requêtes HTTP et aux callbacks, aux promesses et aux fonctions asynchrones m'a permis de surmonter ces difficultés.",
       "github": "https://github.com/GiraltDeReve/Site-Portfolio-Sophie-Bluel-",
       "repo": "Site-Portfolio-Sophie-Bluel-",
       "technologies" : [
@@ -66,6 +67,7 @@
 
       ],
       "description": "Le projet consiste à planifier le développer d’un site permettant aux restaurateurs de créer facilement leurs menus. Les objectifs comprennent la préparation du projet, la mise en place d'une méthodologie de travail agile, ainsi que le développement de fonctionnalités clés. J’avais a disposition la maquette desktop, la documentation des spécifications fonctionnelles et les user stories. Mes missions était de créer un système de veille et sa documentation, d’approfondir les spécifications techniques afin d’organiser la gestion de projet via un tableau Kanban. ",
+      "problems" : "Les difficultés rencontrées étaient liées à l'étude et à la justification des choix effectués pour les spécifications techniques. Pour m'aider à surmonter ces appréhensions, j'ai réalisé un travail de veille important qui m'a permis de rassembler les ressources nécessaires.",
       "link": "https://www.canva.com/design/DAFduoJiVHM/viM77MBy_UJtTBDhsmaIFA/edit?analyticsCorrelationId=71aca1ed-2c77-487b-8df3-0e52b8453464",
       "technologies" : [
         {
@@ -141,6 +143,7 @@
         "https://imageshack.com/i/pnnS3cfzp"
       ],
       "description": "Le projet consiste à développer le back end du site Mon Vieux Grimoire, une plateforme de notation de livres. Mes missions étaient de développer le backend en utilisant MongoDB, Mongoose, Express et Node.js, tandis que le front-end serait développé en React. L'objectif était de permettre aux utilisateurs de se créer un compte puis se connecter afin d'ajouter des livres, les modifier et les supprimer. Il leur était également possible de noter d’autres livres créer par d’autres utilisateurs. J'ai mis en place la logique du serveur, les modèles de données, les routes et intégré les fonctionnalités spécifiées dans l'API existante. Le résultat était une plateforme interactive pour partager et évaluer des livres.",
+      "problems" : "L'installation et la gestion de plusieurs paquets et dépendances ont parfois posé des difficultés, mais j'ai appris l'importance de prendre le temps d'effectuer une installation propre. Cela permet d'éviter tout problème ou conflit entre les différents paquets. En prenant le temps nécessaire, j'ai pu installer les paquets de manière méthodique et prévenir les éventuels conflits qui pourraient survenir.",
       "github": "https://github.com/GiraltDeReve/application-p7",
       "repo": "application-p7",
       "technologies" : [
