modif responsive mobile

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -28,7 +28,7 @@
     },
     {
       "id": "2",
-      "title": "Créer une page web dynamique avec Javscript et une API",
+      "title": "Créer une page web dynamique avec Javascript et une API",
       "cover": "https://imageshack.com/i/pmUIiXaip",
       "pictures": [
         "https://imageshack.com/i/pnbzc8qIp",
